[3537] Fix split CalculatedTimeSeries
Signed-off-by: Matthieu SAUR <matthieu.saur@rte-france.com>